syntax = "proto3";
option go_package = "./pb";

package pb;

message APINode {
	int64 id = 1;
	bool isOn = 2;
	int64 clusterId = 3;
	string uniqueId = 4;
	string secret = 5;
	string name = 6;
	string description = 7;
	string host = 8;
	int32 port = 9;
}